Improvements & bug fixes
- Fix links getting out of bounds in mobile pages
- Fix issues with definition cards

--- a/SpiderWeb/css/results.css
+++ b/SpiderWeb/css/results.css
@@ -2,6 +2,31 @@ body {
 	font-family:Verdana,sans-serif;
 }
 
+.ellipses {
+/* These are technically the same, but use both */
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+
+  -ms-word-break: break-all;
+  /* This is the dangerous one in WebKit, as it breaks things wherever */
+  word-break: break-all;
+  /* Instead use this non-standard one: */
+  word-break: break-word;
+
+  /* Adds a hyphen where the word breaks, if supported (No Blink) */
+  -ms-hyphens: auto;
+  -moz-hyphens: auto;
+  -webkit-hyphens: auto;
+  hyphens: auto;
+}
+
+#definition-card {
+	padding-left: 9px;
+	padding-right: 9px;
+	background: rgba(250, 250, 250, 0.65);
+	border: solid 1px #ebebeb;
+}
+
 .pagination {
     display: inline-block;
 	margin: auto;
